//
// Created by kikok on 11/06/2026.
//

#ifndef SESSAO_H
#define SESSAO_H



class sessao {

};



#endif //SESSAO_H
